--- a/contact.html
+++ b/contact.html
@@ -157,7 +157,7 @@
                                                     <div class="content">
                                                         <div class="title">Mathematical modeling:
 
-                                                            Passionate in building a strong quantitative foundation (e.g., statistics, probability, optimization, linear algebra) and an interest in applying computational engineering to water resources.</div>
+                                                            Passionate in building a strong quantitative foundation (e.g., statistics, probability, optimization, linear algebra) and an interest in applying state-of-the-art ML/DL techniques to water resources and Climate science.</div>
                                                     </div>
                                                 </li>
                                                 <li style="--cardColor:#162d59">
@@ -200,6 +200,8 @@
 
 <br>This pioneering initiative involves cross-disciplinary research and offers scholars the opportunity to earn an international joint Ph.D. degree with a generous scholarship. Additionally, students will have the unique opportunity to conduct their research at both IITM and DU. To know more about the joint IITM-DU joint Ph.D. program please visit <a href="https://ge.iitm.ac.in/iitmdu"> IIT Madras - Deakin University Research Academy</a>.  <br>The proposed project focuses on Integration of SWOT and GRACE Satellite data for Hydro-climatic analysis using Advanced Machine Learning Techniques. To know more about the project visit <a href="https://ge.iitm.ac.in/iitmdu/project/integration-of-swot-and-grace-satellite-data"> Project IITM-DU-Joint-PHD </a>
 <br>We are particularly interested in scholars who possess a strong passion for addressing water-related challenges through the utilization of remote sensing data products, leveraging the capabilities of advanced machine learning/deep learning techniques.<br> Kindly apply directly through the <a href="https://ge.iitm.ac.in/iitmdu"> IIT Madras - Deakin University Research Academy</a> website. </font></p><br>
+<h2 class="fh5co-heading-colored"><font size="5" style="font-weight: bolder">IIT Madras BTech Students (for projects)</font></h2>
+ <p><font size="2.5px">Kindly drop me an email. We can chat in-person.</font></p><br>
 						   
 						   <h2 class="fh5co-heading-colored"><font size="5" style="font-weight: bolder">Prospective Summer Internship Students</font></h2>
 						   <p><font size="2.5px">Students interested in summer internship at IIT Madras can apply through the official webpage (<a href="https://sfp.iitm.ac.in/">here</a>).</font></p><br>
