--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>HGC &mdash; HydroGeoClimatic Lab, IIT Madras</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Hydro-climatological Lab" />
+	<meta name="description" content="HydroGeoclimatic Lab" />
 	<meta name="keywords" content="Dr. Sreeparvathy Vijay, IIT Madras" />
 	<meta name="author" content="Dr. Sreeparvathy Vijay, IIT Madras" />
   	<!-- 
