--- a/teaching.html
+++ b/teaching.html
@@ -190,6 +190,7 @@
                         <div class="teachingYears">
 
 							<a class="teachingLinks" href="">Jan-May, 2024</a> </div>
+							<a class="teachingLinks" href="">Jan-May, 2025</a> </div>
 
                         </div>	
 
