--- a/teaching.html
+++ b/teaching.html
@@ -189,8 +189,8 @@
                         </div>
                         <div class="teachingYears">
 
-							<a class="teachingLinks" href="">Jan-May, 2024</a> </div>
-							<a class="teachingLinks" href="">Jan-May, 2025</a> </div>
+							<a class="teachingLinks" href="">Jan-May, 2024  Jan-May, 2025</a> </div>
+		
 
                         </div>	
 
