--- a/teaching.html
+++ b/teaching.html
@@ -189,7 +189,7 @@
                         </div>
                         <div class="teachingYears">
 
-							<a class="teachingLinks" href="">Jan-May, 2024 </a><a class="teachingLinks" href=""> Jan-May, 2025</a> </div>
+							<a class="teachingLinks" href="">Jan-May, 2024, 2025 </a></div>
 		
 
                         </div>	
