New updates upto Jan 2025

--- a/index.html
+++ b/index.html
@@ -185,12 +185,25 @@ If you share a common research interest and wish to explore further or bring inn
 								<div class="card-testimonial">
 							      <article>
 							        <picture>
-							          <source media="(min-width: 768px)" srcset="images/Ivana Rose Thomas.png">
-							          <img src="images/Ivana Rose Thomas.png" alt="">
+							          <source media="(min-width: 768px)" srcset="images/kartikey_mehar.png">
+							          <img src="images/kartikey_mehar.png" alt="">
 							        </picture>
-							        <h4>Weclome Ivana</h4>
+							        <h4>Weclome Karthikey</h4>
 							        <article class="short-description">
-							          <p>Welcoming PhD scholar (Ivana Rose Thomas) to join the HGC group (July-2024)</p>
+							          <p>Welcoming Karthikey Mehar (Joint IITM-Deakin University PhD Program) to join the HGC group (July-2024). </p>
+							        </article>
+							      </article>
+							    </div>
+								
+								<div class="card-testimonial">
+							      <article>
+							        <picture>
+							          <source media="(min-width: 1000px)" srcset="images/IWFRC_6.png">
+							          <img src="images/IWFRC_6.png" alt="">
+							        </picture>
+							        <h4>IWFRC 2024</h4>
+							        <article class="short-description">
+							          <p>International Workshop on Flood Risk and Climate Change (IWFRC) 2024, jointly organised by IIT Madras and University of Leeds UK <strong>(Website: </strong><a href="https://www.linkedin.com/in/debdut-sengupta-898309173/">https://www.linkedin.com/in/debdut-sengupta-898309173/)</a></p>
 							        </article>
 							      </article>
 							    </div>
@@ -204,19 +217,6 @@ If you share a common research interest and wish to explore further or bring inn
 							        <h4>Congragulations Debdut!</h4>
 							        <article class="short-description">
 							          <p>  Debdut Sengupta recieved the Best Paper award (for his master's research) at the Young Leaders Conclave on Environment and Disaster, organized by the National Institute of Disaster Management, Ministry of Home Affairs, Govt. of India.</p>
-							        </article>
-							      </article>
-							    </div>
-								
-								<div class="card-testimonial">
-							      <article>
-							        <picture>
-							          <source media="(min-width: 768px)" srcset="images/Debdut Sengupta.png">
-							          <img src="images/Siddharth Goutam.png" alt="">
-							        </picture>
-							        <h4>Weclome Siddharth</h4>
-							        <article class="short-description">
-							          <p>Welcoming first Mtech Student (Siddharth Goutam) to join the HGC group (June-2024)</p>
 							        </article>
 							      </article>
 							    </div>
