--- a/people.html
+++ b/people.html
@@ -207,7 +207,20 @@
 							<a><img src="images/Bhanu.png" class="img-responsive" alt="Bhanu"></a>
 							<div class="desc">
 							<h3><a><strong>Bhanu Kiran Verma</strong></a><br></h3>
+							<a style="color:black" size="5px"><strong>Batch:</strong>2021-2025</a><br>
 							<a style="color:black" size="5px"><strong>Contact:</strong>ce21b031@smail.iitm.ac.in</a><br>
+							</div>
+						</div>
+					</div>
+					
+					<div class="col-md-3	 col-sm-5 col-padding animate-box" data-animate-effect="fadeInLeft">
+						<div class="blog-entry">
+							<a><img src="images/Akshitha.png" class="img-responsive" alt="Bhanu"></a>
+							<div class="desc">
+							<h3><a><strong>Akshitha Ananda</strong></a><br></h3>
+							<a style="color:black" size="5px"><strong>Batch:</strong>2022-2026</a><br>
+							<a style="color:black" size="5px"><strong>Contact:</strong>ce22b037@smail.iitm.ac.in</a><br>
+							<a style="color:black" size="5px"><strong>Linkedin: </strong><a href="https://www.linkedin.com/in/akshitaananda/">https://www.linkedin.com/in/akshitaananda/</a>
 							</div>
 						</div>
 					</div>
