--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@ If you share a common research interest and wish to explore further or bring inn
 							        </picture>
 							        <h4>IWFRC 2024</h4>
 							        <article class="short-description">
-							          <p>International Workshop on Flood Risk and Climate Change (IWFRC) 2024, jointly organised by IIT Madras and University of Leeds UK <strong>(Website: </strong><a href="https://www.linkedin.com/in/debdut-sengupta-898309173/">https://www.linkedin.com/in/debdut-sengupta-898309173/)</a></p>
+							          <p>International Workshop on Flood Risk and Climate Change (IWFRC) 2024, jointly organised by IIT Madras and University of Leeds UK <strong>(Website: </strong><a href="https://www.linkedin.com/in/debdut-sengupta-898309173/">https://iwfrc-2024.vercel.app/iwfrc-2024)</a></p>
 							        </article>
 							      </article>
 							    </div>
