updated the information of Siddarth Nair

--- a/people.html
+++ b/people.html
@@ -211,6 +211,17 @@
 				<h2 align="center"> BTECH Project</h2>
 				
 				<div class="col-md-3	 col-sm-5 col-padding animate-box" data-animate-effect="fadeInLeft">
+						<div class="blog-entry">
+							<a><img src="images/Siddharth Nair.png" class="img-responsive" alt="Siddharth Nair"></a>
+							<div class="desc">
+							<h3><a><strong>Siddharth Nair</strong></a><br></h3>
+							<a style="color:black" size="5px"><strong>Batch: </strong>2022-2026</a><br>
+							<p><a href="Student_template/SiddarthNair.html" class="btn btn-primary">About me</a></p>
+						</div>
+					</div>
+				</div>
+				
+				<div class="col-md-3	 col-sm-5 col-padding animate-box" data-animate-effect="fadeInLeft">
 					<div class="blog-entry">
 						<a><img src="images/Vetreivel.png" class="img-responsive" alt="Vetreivel"></a>
 						<div class="desc">
