--- a/Student_template/Nestor.html
+++ b/Student_template/Nestor.html
@@ -36,7 +36,7 @@
 				</div>
 				<div class="row row-padded-bottom">
 					<div class="col-md-5 animate-box">
-						<img src="images/NEstor.png" class="img-responsive" alt="Nestor Costas Msigwa">
+						<img src="images/Nestor.png" class="img-responsive" alt="Nestor Costas Msigwa">
 					</div>
 					<div class="col-md-6 col-md-push-1 animate-box">
 						<div class="about-desc">
