updated project associate

--- a/contact.html
+++ b/contact.html
@@ -207,7 +207,8 @@
 						   <p><font size="2.5px">Researchers can apply through the IIT Madras webpage (<a href="https://www.iitm.ac.in/careers/post-doctoral-opportunities">here</a>).</font></p><br>
 						   
 						   <h2 class="fh5co-heading-colored"><font size="5" style="font-weight: bolder">Project Associate positions</font></h2>
-						 <p align='justify'> <font size="2.5px">Currently there are no openings for project associate roles. Please check this space for updates on vacancies, and researchers are welcome to apply as opportunities become available. </font></p>
+						 <p align='justify'> <font size="2.5px">Looking for a Project Associate who has completed their Master's degree in Hydrology/Climate Science/Remote Sensing/related fields, to work under the ANRF Early Career Faculty Grant.
+Interested candidates may kindly send their CV to sreeparvathyvijay@civil.iitm.ac.in.</font></p>
 			
 	</div>
 </div>
