updated rahul info

--- a/people.html
+++ b/people.html
@@ -181,6 +181,18 @@
 							<div class="row row-bottom-padded-md">
 								<div class="col-md-3	 col-sm-4 col-padding animate-box" data-animate-effect="fadeInLeft">
 									<div class="blog-entry">
+										<a><img src="images/Rahul.png" class="img-responsive" alt="Rahul sinha"></a>
+										<div class="desc">
+										<h3><a><strong>Rahul sinha</strong></a><br></h3>
+										<a style="color:black" size="5px"><strong>Batch: </strong>2024-2026</a><br>
+										<p><a href="Student_template/Rahul.html" class="btn btn-primary">About me</a></p>
+										</div>
+									</div>
+								</div>
+							
+							<div class="row row-bottom-padded-md">
+								<div class="col-md-3	 col-sm-4 col-padding animate-box" data-animate-effect="fadeInLeft">
+									<div class="blog-entry">
 										<a><img src="images/Nestor.png" class="img-responsive" alt="Nestor Costas Msigwa"></a>
 										<div class="desc">
 										<h3><a><strong>Nestor Costas Msigwa</strong></a><br></h3>
