--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
                 <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                     <div class="navbar-nav ml-auto">
                         <a href="index.html" class="nav-item nav-link active">Home</a>
-                        <a href="updates.html" class="nav-item nav-link">Updates</a>
-                        <a href="achievements.html" class="nav-item nav-link">Achievements</a>
-                        <a href="people.html" class="nav-item nav-link">People</a>
+                        <a href="updates.html" class="nav-item nav-link">People</a>
+                        <a href="achievements.html" class="nav-item nav-link">Updates</a>
+                        <a href="people.html" class="nav-item nav-link">Achievements</a>
                         <a href="teaching.html" class="nav-item nav-link">Teaching</a>
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>
