--- a/publication_details.html
+++ b/publication_details.html
@@ -58,10 +58,10 @@
                 <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                     <div class="navbar-nav ml-auto">
                         <a href="index.html" class="nav-item nav-link">Home</a>
-                        <a href="updates.html" class="nav-item nav-link ">People</a>
-                        <a href="achievements.html" class="nav-item nav-link ">Updates</a>
-                        <a href="people.html" class="nav-item nav-link ">Achievements</a>
-                        <a href="teaching.html" class="nav-item nav-link ">Teaching</a>
+                        <a href="people.html" class="nav-item nav-link ">People</a>
+                        <a href="updates.html" class="nav-item nav-link ">Updates</a>
+                        <a href="achievements.html" class="nav-item nav-link active">Achievements</a>
+                        <a href="teaching.html" class="nav-item nav-link">Teaching</a>
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>
                             <div class="dropdown-menu">
