update for mobile

--- a/index.html
+++ b/index.html
@@ -154,6 +154,8 @@
                 <div class="row align-items-center">
                     <div class="col-lg-6">
                         <div class="about-img" data-parallax="scroll" data-image-src="img/IITM photo.jpg"></div>
+						<!-- Normal img for mobile -->
+						<img src="img/IITM photo.jpg" class="img-fluid d-lg-none" alt="IITM">
                     </div>
                     <div class="col-lg-6">
                         <div class="section-header">
