small change for mob

--- a/index.html
+++ b/index.html
@@ -155,7 +155,8 @@
                     <div class="col-lg-6">
                         <div class="about-img" data-parallax="scroll" data-image-src="img/IITM photo.jpg"></div>
 						<!-- Normal img for mobile -->
-						<img src="img/IITM photo.jpg" class="img-fluid d-lg-none" alt="IITM">
+						<img src="img/IITM photo.jpg" class="img-fluid d-block d-lg-none" alt="IITM">
+						
                     </div>
                     <div class="col-lg-6">
                         <div class="section-header">
