--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-lg-6">
-                        <div class="about-img" data-parallax="scroll" data-image-src="img/IITM photo.jpg"></div>
+						<div class="about-img d-none d-md-block" data-parallax="scroll" data-image-src="img/IITM-photo.jpg"></div>
 						<!-- Normal img for mobile -->
 						<img src="img/IITM photo.jpg" class="img-fluid d-block d-lg-none" alt="IITM">
 						
