--- a/publication_details.html
+++ b/publication_details.html
@@ -60,12 +60,12 @@
                         <a href="index.html" class="nav-item nav-link">Home</a>
                         <a href="people.html" class="nav-item nav-link ">People</a>
                         <a href="updates.html" class="nav-item nav-link ">Updates</a>
-                        <a href="achievements.html" class="nav-item nav-link active">Achievements</a>
+                        <a href="achievements.html" class="nav-item nav-link">Achievements</a>
                         <a href="teaching.html" class="nav-item nav-link">Teaching</a>
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>
                             <div class="dropdown-menu">
-                                <a href="publication_details.html" class="dropdown-item ">Publication details</a>
+                                <a href="publication_details.html" class="dropdown-item active ">Publication details</a>
                                 
                             </div>
                         </div>
