--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
                             <div class="blog-text">
                                 <h3><a href="#">Geospatial Data Science</a></h3>
                                 <p>
-                                    Utilising large-scale remote sensing and model-based datasets, combined with ground observations, to advance Earth sciences through cutting-edge applications of Artificial Intelligence, including Machine Learning and Deep Learning.
+                                    Utilising large-scale remote sensing and model-based datasets, combined with ground observations, to advance Earth sciences through cutting-edge advancements in Artificial Intelligence, including Machine Learning and Deep Learning.
                                 </p>
                             </div>
                            
