updated students profile

--- a/Student_template/Bhanu.html
+++ b/Student_template/Bhanu.html
@@ -36,28 +36,24 @@
 				</div>
 				<div class="row row-padded-bottom">
 					<div class="col-md-5 animate-box">
-						<img src="images/Nestor.png" class="img-responsive" alt="Nestor Costas Msigwa">
+						<img src="images/Bhanu.jpg" class="img-responsive" alt="Siddarth Nair">
 					</div>
 					<div class="col-md-6 col-md-push-1 animate-box">
 						<div class="about-desc">
-							<h2><span>Nestor Costas Msigwa</span></h2>
+							<h2><span>Bhanu Kiran Verma</span></h2>
 							<div class="desc">
 								<div class="rotate">
 									<h2 class="heading">About</h2>
 								</div>
-								<p><strong style="color: black;">Batch: 2024-2026<br>MTech Thesis Project (Jointly guided by Prof. Elango Lakshmanan)</strong></p>
-							
-								<p> I hold a Bachelor of Science in Environmental Engineering from Ardhi University (Tanzania) and am currently pursuing a Master of Technology (M.Tech) in Hydraulics and Water Resources Engineering at the Indian Institute of Technology Madras (India). Alongside my studies, I serve as a Tutorial Assistant at Ardhi University.<p></p>
-
-I have practical experience in plumbing and construction, as well as in Water, Sanitation, and Hygiene (WASH) initiatives through my work with humanitarian NGOs. My professional interests lie at the intersection of engineering, sustainable development, and community resilience.<p></p>
-
-In addition to my academic and professional pursuits, I volunteer with the Tanzania Red Cross Society (TRC). I enjoy reading scientific and inspirational literature, exploring nature, traveling, engaging in debates, watching documentaries and movies, and staying active through gym workouts and other physical activities.
-
-</p>
-								<a href="mailto:ce24m827@smail.iitm.ac.in">Contact Me</a><p></p>
+								<p><strong style="color: black;">Batch: 2022-2026 (Dual Degree)<br>Project: UGRP-I and II</strong></p>
+								<p> Hey there! Thanks for stopping by. I’m a final-year Interdisciplinary Dual Degree student at IIT Madras, majoring in Civil Engineering and Data Science. My Primary Interest is crafting intelligent systems that leave a mark where it matters most. Over the years, I’ve worked on a diverse range of projects—from developing AI for autonomous robots in robotics, to NLP applications for drift detection, and more recently, computer vision models for 3D audio and stereo reconstruction, as well as leveraging big data for hydrologic analysis.
+									<p></p>
+Beyond academics, I love chasing adventures—whether it’s trekking through the mountains, surfing the waves, or simply exploring new corners of the world. Music and sports like cricket, volleyball, and chess keep me grounded, while history and philosophy fuel my curiosity about how we got here and where we’re headed. At the core, I hold onto a belief that resonates deeply with me: ‘Educating the mind without educating the heart is no education at all'.</p>
+								<a href="mailto:bhanukiranverma@gmail.com">Contact Me</a><p></p>
 
 								<p class="colorlib-social-icons">
-									<a href=""><i class="icon-linkedin"></i></a>
+									<a href="https://www.linkedin.com/in/bhanukiranverma/"><i class="icon-linkedin"></i></a><br>
+									<a href="https://github.com/bhanu-kv">GitHub ID:</a>
 								</p>
 								
 							</div>
