--- a/Student_template/Hridya.html
+++ b/Student_template/Hridya.html
@@ -45,7 +45,11 @@
 								<div class="rotate">
 									<h2 class="heading">About</h2>
 								</div>
-								<p> I am Hridhya Joseph. I completed my B.Tech in Civil Engineering, with a Minor Deree in Chemical Engineering from Government Engineering College, Thrissur, with a CGPA of 8.95. Currently, I am pursuing my M.Tech in Hydraulics and Water Resources Engineering at IIT Madras. I have a deep interest in the field of water resources and am passionate about teaching, which I consider a meaningful way to share knowledge and inspire others.</p>
+								<p><strong style="color: black;">Batch: 2024-2026<br>MTech Thesis Project</strong></p>
+								
+								<p> I hold a B.Tech Degree in Civil Engineering with a Minor Degree in Chemical Engineering from Government Engineering College, Thrissur, where I graduated with a CGPA of 8.95. Currently, I am pursuing M.Tech in Hydraulics and Water Resources Engineering at IIT Madras.
+I have a deep interest in the field of water resources and am passionate about teaching, which I believe is a meaningful way to share knowledge and inspire future generations. My current research focuses on assessing the influence of climate variability on global vegetation using PACE satellite data.
+</p>
 								<a href="mailto:ce24m056@smail.iitm.ac.in">Contact Me</a><p></p>
 
 								<p class="colorlib-social-icons">
