--- a/Student_template/Jeff.html
+++ b/Student_template/Jeff.html
@@ -36,28 +36,25 @@
 				</div>
 				<div class="row row-padded-bottom">
 					<div class="col-md-5 animate-box">
-						<img src="images/Nestor.png" class="img-responsive" alt="Nestor Costas Msigwa">
+						<img src="images/Jeff.jpg" class="img-responsive" alt="Siddarth Nair">
 					</div>
 					<div class="col-md-6 col-md-push-1 animate-box">
 						<div class="about-desc">
-							<h2><span>Nestor Costas Msigwa</span></h2>
+							<h2><span>Vishnu Vijayaraj</span></h2>
 							<div class="desc">
 								<div class="rotate">
 									<h2 class="heading">About</h2>
 								</div>
-								<p><strong style="color: black;">Batch: 2024-2026<br>MTech Thesis Project (Jointly guided by Prof. Elango Lakshmanan)</strong></p>
-							
-								<p> I hold a Bachelor of Science in Environmental Engineering from Ardhi University (Tanzania) and am currently pursuing a Master of Technology (M.Tech) in Hydraulics and Water Resources Engineering at the Indian Institute of Technology Madras (India). Alongside my studies, I serve as a Tutorial Assistant at Ardhi University.<p></p>
+								<p><strong style="color: black;">Batch: 2022-2026 <br>Project: BTP-1</strong></p>
+								<p> I am final year BTech Civil Engineering student at IIT Madras. I have been curious on how modern advances in tech help optimize study in civil engineering and its applications, especially in the field of Hydrology and Climate study. Currently working on understanding how climate variability affects global vegetation using PACE satellite data.
 
-I have practical experience in plumbing and construction, as well as in Water, Sanitation, and Hygiene (WASH) initiatives through my work with humanitarian NGOs. My professional interests lie at the intersection of engineering, sustainable development, and community resilience.<p></p>
-
-In addition to my academic and professional pursuits, I volunteer with the Tanzania Red Cross Society (TRC). I enjoy reading scientific and inspirational literature, exploring nature, traveling, engaging in debates, watching documentaries and movies, and staying active through gym workouts and other physical activities.
+My hobbies include reading books (mostly mystery or fantasy novels), solving puzzles, cycling. I love surrounding myself with people who are smarter than me and learning from others.  I also enjoy playing badminton with friends.
 
 </p>
-								<a href="mailto:ce24m827@smail.iitm.ac.in">Contact Me</a><p></p>
+								<a href="mailto:ce22b060@smail.iitm.ac.in">Contact Me</a><p></p>
 
 								<p class="colorlib-social-icons">
-									<a href=""><i class="icon-linkedin"></i></a>
+									<a href="https://www.linkedin.com/in/jeff-joseph-503609279?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="icon-linkedin"></i></a>
 								</p>
 								
 							</div>
