--- a/Student_template/Rahul.html
+++ b/Student_template/Rahul.html
@@ -45,6 +45,7 @@
 								<div class="rotate">
 									<h2 class="heading">About</h2>
 								</div>
+								<p><strong style="color: black;">Batch: 2024-2026<br>MTech Thesis Project</strong></p>
 								<p> I have completed my Bachelor of Technology in Civil Engineering from the Indian
 Institute of Technology (Indian School of Mines), Dhanbad. Currently, I am pursuing
 my M.Tech in Hydraulics and Water Resources Engineering at IIT Madras. During
