--- a/Student_template/SiddarthNair.html
+++ b/Student_template/SiddarthNair.html
@@ -45,6 +45,7 @@
 								<div class="rotate">
 									<h2 class="heading">About</h2>
 								</div>
+								<p><strong style="color: black;">Batch: 2022-2026 (Dual Degree)<br>Project: BTP-1</strong></p>
 								<p> Hey there! I’m an Interdisciplinary Dual Degree student at IIT Madras, majoring in Civil Engineering and Data Science. My primary interest lies in Quantitative Precipitation Estimation (QPE) using Doppler Weather Radar (DWR) and satellite data. Over the years, I’ve worked on a variety of technical projects—from developing an ultrasonic metal 3D printer and a smart cycle lock to building a computer vision-based system for railway crack detection. I enjoy tackling challenges that connect hardware, data, and real-world applications.
 									<p></p>
 Outside academics, I love spending time outdoors—whether it’s trekking through nature, exploring new places, or diving into history. I’m also passionate about photography, especially capturing the stories and landscapes I come across during my travels. For me, combining technology with creativity is not just fun but also a powerful way to communicate and learn.
