--- a/Student_template/Vetreivel.html
+++ b/Student_template/Vetreivel.html
@@ -45,6 +45,7 @@
 								<div class="rotate">
 									<h2 class="heading">About</h2>
 								</div>
+								<p><strong style="color: black;">Batch: 2022-2026<br>Project: BTP-1</strong></p>
 								<p> I am a final-year undergraduate student pursuing Civil Engineering at IIT Madras. While my
 academic foundation lies in civil engineering. However, it was after my sophomore year that I
 discovered a deep interest in machine learning, especially in its ability to model complex,
