--- a/Student_template/Dipanshu.html
+++ b/Student_template/Dipanshu.html
@@ -36,28 +36,26 @@
 				</div>
 				<div class="row row-padded-bottom">
 					<div class="col-md-5 animate-box">
-						<img src="images/Nestor.png" class="img-responsive" alt="Nestor Costas Msigwa">
+						<img src="images/Dipanshu.jpg" class="img-responsive" alt="Siddarth Nair">
 					</div>
 					<div class="col-md-6 col-md-push-1 animate-box">
 						<div class="about-desc">
-							<h2><span>Nestor Costas Msigwa</span></h2>
+							<h2><span>Dipanshu Panda</span></h2>
 							<div class="desc">
 								<div class="rotate">
 									<h2 class="heading">About</h2>
 								</div>
-								<p><strong style="color: black;">Batch: 2024-2026<br>MTech Thesis Project (Jointly guided by Prof. Elango Lakshmanan)</strong></p>
-							
-								<p> I hold a Bachelor of Science in Environmental Engineering from Ardhi University (Tanzania) and am currently pursuing a Master of Technology (M.Tech) in Hydraulics and Water Resources Engineering at the Indian Institute of Technology Madras (India). Alongside my studies, I serve as a Tutorial Assistant at Ardhi University.<p></p>
-
-I have practical experience in plumbing and construction, as well as in Water, Sanitation, and Hygiene (WASH) initiatives through my work with humanitarian NGOs. My professional interests lie at the intersection of engineering, sustainable development, and community resilience.<p></p>
-
-In addition to my academic and professional pursuits, I volunteer with the Tanzania Red Cross Society (TRC). I enjoy reading scientific and inspirational literature, exploring nature, traveling, engaging in debates, watching documentaries and movies, and staying active through gym workouts and other physical activities.
+								<p><strong style="color: black;">Batch: 2022-2026 <br>Project: BTP-1</strong></p>
+								<p> I am Dipanshu Panda, Final Year Undergraduate at the Department of Civil
+Engineering. Academically, I am more inclined towards Artificial Intelligence, Deep
+Learning and Machine Learning and exploring the application of these techniques to
+solve real-world problems. Apart from this, I am a big-time movie buff.
 
 </p>
-								<a href="mailto:ce24m827@smail.iitm.ac.in">Contact Me</a><p></p>
+								<a href="mailto:Dipanshu.panda75@gmail.com">Contact Me</a><p></p>
 
 								<p class="colorlib-social-icons">
-									<a href=""><i class="icon-linkedin"></i></a>
+									<a href="https://in.linkedin.com/in/dipanshu-panda-3953a228b"><i class="icon-linkedin"></i></a>
 								</p>
 								
 							</div>
