--- a/Student_template/Vishnu.html
+++ b/Student_template/Vishnu.html
@@ -36,28 +36,23 @@
 				</div>
 				<div class="row row-padded-bottom">
 					<div class="col-md-5 animate-box">
-						<img src="images/Nestor.png" class="img-responsive" alt="Nestor Costas Msigwa">
+						<img src="images/Vishnu.jpg" class="img-responsive" alt="Siddarth Nair">
 					</div>
 					<div class="col-md-6 col-md-push-1 animate-box">
 						<div class="about-desc">
-							<h2><span>Nestor Costas Msigwa</span></h2>
+							<h2><span>Vishnu Vijayaraj</span></h2>
 							<div class="desc">
 								<div class="rotate">
 									<h2 class="heading">About</h2>
 								</div>
-								<p><strong style="color: black;">Batch: 2024-2026<br>MTech Thesis Project (Jointly guided by Prof. Elango Lakshmanan)</strong></p>
-							
-								<p> I hold a Bachelor of Science in Environmental Engineering from Ardhi University (Tanzania) and am currently pursuing a Master of Technology (M.Tech) in Hydraulics and Water Resources Engineering at the Indian Institute of Technology Madras (India). Alongside my studies, I serve as a Tutorial Assistant at Ardhi University.<p></p>
-
-I have practical experience in plumbing and construction, as well as in Water, Sanitation, and Hygiene (WASH) initiatives through my work with humanitarian NGOs. My professional interests lie at the intersection of engineering, sustainable development, and community resilience.<p></p>
-
-In addition to my academic and professional pursuits, I volunteer with the Tanzania Red Cross Society (TRC). I enjoy reading scientific and inspirational literature, exploring nature, traveling, engaging in debates, watching documentaries and movies, and staying active through gym workouts and other physical activities.
-
+								<p><strong style="color: black;">Batch: 2022-2026 <br>Project: BTP-1</strong></p>
+								<p> I am currently pursuing my B.Tech in Civil Engineering at IIT Madras, currently in my fourth year. Being in this project, I am currently working on downscaling algorithms for improving the spatial resolution of satellite data.
+I love drawing, which usually involves rough sketches that I make to freshen up myself when I am bored. I love to read mystery thriller novels and I find it fascinating to imagine them and try to solve the mystery myself. I love to travel and listen to songs,  mostly melodies.
 </p>
-								<a href="mailto:ce24m827@smail.iitm.ac.in">Contact Me</a><p></p>
+								<a href="mailto:ce22b123@smail.iitm.ac.in">Contact Me</a><p></p>
 
 								<p class="colorlib-social-icons">
-									<a href=""><i class="icon-linkedin"></i></a>
+									<a href="https://www.linkedin.com/in/vishnu-vijayaraj?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="icon-linkedin"></i></a>
 								</p>
 								
 							</div>
