--- a/Student_template/Ivana.html
+++ b/Student_template/Ivana.html
@@ -46,7 +46,7 @@
 									<h2 class="heading">About</h2>
 								</div>
 								<p><strong style="color: black;">Batch: 2024 (Aug) - Present<br>PhD</strong></p>
-								<p> I am a researcher in hydrology with a strong academic background in water resources and earth observation. I completed my master degree in water resources engineering from IIT (Indian Institute of Technology), Tirupati. My PhD research focuses on advancing hydrologic monitoring, prediction and risk assement by integrating satellite data  with in-situ observations to bridge critical data gaps. I am particularly interested in applying spatial analysis, remote sensing, and hydrological modeling to better understand river systems and support sustainable water management.
+								<p> I am a researcher in hydrology with a strong academic background in water resources and earth observation. I completed my master degree in water resources engineering from IIT (Indian Institute of Technology), Tirupati. My PhD research focuses on advancing hydrologic monitoring, prediction and risk assement by integrating satellite remote sensing with in-situ observations to bridge critical data gaps. I am particularly interested in applying spatial analysis, remote sensing, and hydrological modeling to better understand river systems and support sustainable water management.
 Beyond academics, I love to travel, read, and paint. I consider myself an easygoing and cheerful person who believes research ideas can emerge from anywhere—sometimes even over a cup of tea with friends. For me, curiosity and creativity go hand in hand, both in research and in life.
  </p>
 								<a href="mailto:ce24d004@smail.iitm.ac.in">Contact Me</a><p></p>
