--- a/Student_template/Vikas.html
+++ b/Student_template/Vikas.html
@@ -36,7 +36,7 @@
 				</div>
 				<div class="row row-padded-bottom">
 					<div class="col-md-5 animate-box">
-						<img src="images/Vikas.jpg" class="img-responsive" alt="Vikas">
+						<img src="images/Vishnu Vikas.jpg" class="img-responsive" alt="Vikas">
 					</div>
 					<div class="col-md-6 col-md-push-1 animate-box">
 						<div class="about-desc">
