--- a/people.html
+++ b/people.html
@@ -218,7 +218,7 @@
 				            </div>
 				            <div style="border:2px solid #FFE5B4; padding:10px; text-align:center; margin-top:5px; background:#fff;">
 				                <h2 style="font-size:18px; margin:0; font-family:'Poppins', sans-serif; font-weight:600; letter-spacing:0.5px; color:#333;"> Hamsa Venkata Vishnu Vikas <br><span style="font-weight:400;">(ongoing, Joint supervision with Prof. K. P Sudheer)</span></h2>
-				                <a href="Student_template/Vikas.html" 
+				                <a href="Student_template/Vishnu Vikas.html" 
 				                   style="display:inline-block; margin-top:8px; padding:6px 12px; border:1px solid orange; background:orange; color:#fff; text-decoration:none; border-radius:5px; font-size:14px;">
 				                    Know More
 				                </a>
